`JacocoTestUtil クラスから未使用の execTestCaseWithJacocoAgent メソッドを削除`